--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@ Gameboard Baclground: #CED0CE
 Button Background:  #E71D36
 Text: #4A8FE7
 */
+
+/* FOnts
+X and O: Arial, Haelvetica, Sans-serif
+Rest: "Open Sans", Sans-serif
+*/
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
