--- a/style.css
+++ b/style.css
@@ -19,4 +19,20 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 16px;
 	box-sizing: border-box;
+	display: grid;
+	grid-template-rows: repeat(3, 1fr);
+}
+
+/* Gameboard */
+main {
+	grid-row: 2;
+}
+
+.gameboard-grid-container {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	background-color: #ced0ce;
+	margin: 0 auto;
+	width: 50%;
+	text-align: center;
 }
