--- a/style.css
+++ b/style.css
@@ -35,6 +35,21 @@ main {
 	margin: 0 auto;
 	width: 50%;
 	text-align: center;
+	border-radius: 5px;
+	font-size: 8rem;
+	height: 45rem;
+}
+
+.gameboard-grid-container div {
+	border: 1px solid #32292f;
+	display: grid;
+	align-content: center;
+	justify-content: center;
+}
+
+.gameboard-grid-container div:hover {
+	cursor: pointer;
+	background-color: #e71d36;
 }
 
 /* Buttons */
@@ -44,7 +59,7 @@ main {
 }
 .btn {
 	font-family: 'Open Sans', sans-serif;
-	font-size: 1.2rem;
+	font-size: 1.5rem;
 	background-color: #ced0ce;
 	border-radius: .25rem;
 	border: 1px solid transparent;
@@ -53,4 +68,9 @@ main {
 	cursor: pointer;
 	outline: none;
 	color: #e71d36;
+	padding: 1.3rem;
+}
+
+.btn:hover {
+	opacity: .5;
 }
